--- a/virtual-keyboard/src/assets/css/style.scss
+++ b/virtual-keyboard/src/assets/css/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -12,7 +12,7 @@ body {
   margin: 0;
   margin-top: 50px;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .visually-hidden {
